# 7_list

./: CMakeLists.txt  main.cpp
src/: list.cpp  list.h
tests/: ts1.cpp
